minecraft/deployment-minecraft.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: minecraft
  name: minecraft
  labels:
    tier: backend
    app: minecraft
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
    app.kubernetes.io/version: "2026.3.3"
    app.kubernetes.io/managed-by: argoCD
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft
      tier: backend
  template:
    metadata:
      labels:
        app: minecraft
        tier: backend
    spec:
      automountServiceAccountToken: false
      priorityClassName: homelab-best-effort
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: minecraft-lh
          persistentVolumeClaim:
            claimName: minecraft1-lh
        - name: tmp
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: mnecraft
          image: harbor.andreybondarenko.com/dockerhub/itzg/minecraft-server:2026.9.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 25565
            - containerPort: 25575
          startupProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 15
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 60
            timeoutSeconds: 1
            failureThreshold: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: minecraft-lh
              mountPath: /data
            - mountPath: /tmp
              name: tmp
          resources:
            requests:
              cpu: "250m"
              memory: "1600Mi"
            limits:
              memory: "2304Mi"
