minecraft/minecraft-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: minecraft
  name: minecraft
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
      tier: backend
  template:
    metadata:
      labels:
        app: minecraft
        tier: backend
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: minecraft-lh
          persistentVolumeClaim:
            claimName: minecraft1-lh
        - name:  tmp
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: mnecraft
          image: itzg/minecraft-server:latest
          ports:
            - containerPort: 25565
            - containerPort: 25575
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: minecraft-lh
              mountPath: /data
            - mountPath: /tmp
              name: tmp
          resources:
            requests:
              cpu: "702m"
              memory: "812Mi"
            limits:
              cpu: "4000m"
              memory: "1812Mi"
