minecraft/minecraft_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: minecraft
  name: minecraft
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
      tier: backend
  template:
    metadata:
      labels:
        app: minecraft
        tier: backend
    spec:
      volumes:
        - name: minecraft-nfs
          persistentVolumeClaim:
            claimName: minecraft-nfs
      containers:
        - name: mnecraft
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
            - containerPort: 25575
          volumeMounts:
            - name: minecraft-nfs
              mountPath: /data
          resources:
            requests:
              cpu: "702m"
              memory: "1812Mi"
            limits:
              memory: "1812Mi"
