minecraft/minecraft-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: minecraft
  name: minecraft
  labels:
    tier: backend
    app: minecraft
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  selector:
    app: minecraft
    tier: backend
  ports:
    - protocol: TCP
      port: 25565
  externalIPs:
    - 192.168.1.209
