minecraft/pvc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: minecraft
  name: rcon
  labels:
    tier: backend
spec:
  selector:
    app: minecraft
    tier: backend
  ports:
    - protocol: TCP
      port: 25575
