minecraft/service-minecraft.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: minecraft
  name: minecraft
  labels:
    tier: backend
    app: minecraft
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft
    app.kubernetes.io/version: "2026.3.3"
    app.kubernetes.io/managed-by: argoCD
spec:
  selector:
    app: minecraft
    tier: backend
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
