minecraft/network-policy-minecraft-allow-egress-intra-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minecraft-allow-egress-intra-namespace
  namespace: minecraft
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minecraft
